--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.takisoft.fix:preference-v7:26.1.0.2'
     compile files('libs/zip4j_1.3.2.jar')
 }
 repositories {
