--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "ru.SnowVolf.pcompiler"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 20
-        versionName "2.0.0"
+        versionCode 21
+        versionName "2.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -49,14 +49,14 @@ dependencies {
     compile 'com.android.support:preference-v7:26.1.0'
     compile 'com.android.support:preference-v14:26.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.7.0'
-    compile 'com.jakewharton:butterknife-compiler:8.7.0'
-    compile 'com.jakewharton:butterknife-annotations:8.7.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.jakewharton:butterknife-annotations:8.8.1'
     //compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.faendir:acra:4.10.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
+    //compile 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.yandex.android:mobmetricalib:2.76'
     compile "com.trello.rxlifecycle2:rxlifecycle:2.2.0"
