--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,12 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "ru.SnowVolf.pcompiler"
+        applicationId "ru.SnowVolf.pimplementationr"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 22
         versionName "2.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
@@ -38,32 +37,34 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:preference-v7:26.1.0'
-    compile 'com.android.support:preference-v14:26.1.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.jakewharton:butterknife-annotations:8.8.1'
-    //compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.faendir:acra:4.10.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    //compile 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.yandex.android:mobmetricalib:2.76'
-    compile "com.trello.rxlifecycle2:rxlifecycle:2.2.0"
-    compile "com.trello.rxlifecycle2:rxlifecycle-components:2.2.0"
-    compile "com.trello.rxlifecycle2:rxlifecycle-android:2.2.0"
-    compile files('libs/zip4j_1.3.2.jar')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.android.support:preference-v14:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife-annotations:8.8.1'
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.faendir:acra:4.10.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //implementation 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.yandex.android:mobmetricalib:2.76'
+    implementation "com.trello.rxlifecycle2:rxlifecycle:2.2.0"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-components:2.2.0"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android:2.2.0"
+    implementation files('libs/zip4j_1.3.2.jar')
+
 }
 repositories {
     mavenCentral()
