--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ org.gradle.jvmargs=-Xmx1024m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+#Private signing configs
+KEYSTORE_PASSWORD=Snow_Volf
+KEY_ALIAS=SVolf Releases
+KEY_PASSWORD=SVolf Android Dev
+#Preview for D8 DEX compiler
+android.enableD8=true
