--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-//apply plugin: 'me.tatarka.retrolambda'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+}
+
 
 static def buildTime(){
     def date = new Date().format("dd.MM.yyyy, HH:mm:ss")
@@ -8,15 +10,14 @@ static def buildTime(){
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdk 32
     defaultConfig {
         applicationId "ru.SnowVolf.pcompiler"
-        minSdkVersion 21
-        targetSdkVersion 26
+        minSdk 21
+        targetSdk 32
         versionCode 22
         versionName "2.1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     signingConfigs {
         release {
@@ -46,26 +47,25 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:preference-v7:26.1.0'
-    implementation 'com.android.support:preference-v14:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
     testImplementation 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton:butterknife-annotations:8.8.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.10"
     implementation 'com.faendir:acra:4.10.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    //implementation 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.yandex.android:mobmetricalib:2.76'
     implementation "com.trello.rxlifecycle2:rxlifecycle:2.2.0"
@@ -73,8 +73,4 @@ dependencies {
     implementation "com.trello.rxlifecycle2:rxlifecycle-android:2.2.0"
     implementation files('libs/zip4j_1.3.2.jar')
 
-}
-repositories {
-    mavenCentral()
-    google()
 }
