--- a/gradle.properties
+++ b/gradle.properties
@@ -4,21 +4,41 @@
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1024m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-
 #Private signing configs
 KEYSTORE_PASSWORD=Snow_Volf
 KEY_ALIAS=SVolf Releases
 KEY_PASSWORD=SVolf Android Dev
+
 #Preview for D8 DEX compiler
-android.enableD8=true
+## Project-wide Gradle settings.
+#
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Sat Nov 12 17:03:39 CST 2016
+android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
+
+# ? ???-??? ???? ????? ??????????, ?????????? ?? OOM.
+# ?? ??????? ??????-?? ???????? ? ????????
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+kotlin.daemon.jvm.options=-Xmx4g
+android.nonTransitiveRClass=true
+kotlin.code.style=official
+
+# ?????? ?????? ?? ???????? ??????
+org.gradle.caching=true
+
+# ??????? ?????????, ?? ????. ????????? 1-5%
+org.gradle.parallel=true
+org.gradle.daemon=true
