--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
-        <activity android:name=".ui.activity.TabbedActivity">
+        <activity android:name=".ui.activity.TabbedActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
