--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
-    implementation "com.trello.rxlifecycle2:rxlifecycle:2.2.0"
-    implementation "com.trello.rxlifecycle2:rxlifecycle-components:2.2.0"
-    implementation "com.trello.rxlifecycle2:rxlifecycle-android:2.2.0"
+//    implementation "com.trello.rxlifecycle2:rxlifecycle:2.2.0"
+//    implementation "com.trello.rxlifecycle2:rxlifecycle-components:2.2.0"
+//    implementation "com.trello.rxlifecycle2:rxlifecycle-android:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation files('libs/zip4j_1.3.2.jar')
     implementation project(":blurkit")
