--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,10 @@
         </activity>
         <activity
             android:name="ru.svolf.pcompiler.ui.activity.SettingsActivity"
-            android:label="@string/activity_settings" />
+            android:label="@string/menu_settings" />
         <activity
             android:name="ru.svolf.pcompiler.ui.activity.RegexpActivity"
-            android:label="Regexp"
+            android:label="@string/menu_regexp"
             android:parentActivityName="ru.svolf.pcompiler.ui.activity.TabbedActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
